# weatherAchtung

./: README.md  main.py  pyproject.toml
weather_alerts/: main.py
weather_alerts/api/: Alerts.py  Users.py  alerts.py  users.py
weather_alerts/config/: _debug_settings_check.py  settings.py
weather_alerts/models/: alert.py  user.py
weather_alerts/repositories/: alert_repository.py  user_repository.py
weather_alerts/services/: _debug_weather_check.py  aws_factory.py  notification_service.py  weather_check_service.py  weather_service.py
weather_alerts/tests/: conftest.py  test_api.py  test_weather_service.py
