[project]
name = "weatherachtung"
version = "0.1.0"
description = "Weather Alert app"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]